--- a/Crypto.Console/Crypto.Console.csproj
+++ b/Crypto.Console/Crypto.Console.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="System.Runtime.Numerics" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Crypto.Lib\Crypto.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
